# P0rtSc4nn3r

./: README.md  main.py  port_scanner.py  pyproject.toml
src/: __init__.py
src/core/: __init__.py  config.py  scan_results.py  scanner_engine.py
src/database/: __init__.py  enhanced_port_database.py  port_database.py
src/modules/: __init__.py  banner_grabber.py  vulnerability_scanner.py
src/ui/: __init__.py  enhanced_display.py  interactive_menu.py
