[project]
name = "portscan3r"
version = "2.0.0"
description = "Professional Network Port Scanner with Enhanced Security Analysis"
authors = [
    {name = "RafalW3bCraft", email = "contact@rafalw3bcraft.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
keywords = ["port", "scanner", "security", "networking", "pentesting", "vulnerability", "assessment"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama>=0.4.4",
]

[project.urls]
Homepage = "https://github.com/RafalW3bCraft/P0rtSc4nn3r"
Repository = "https://github.com/RafalW3bCraft/P0rtSc4nn3r"
Issues = "https://github.com/RafalW3bCraft/P0rtSc4nn3r/issues"
Documentation = "https://github.com/RafalW3bCraft/P0rtSc4nn3r/wiki"

[project.scripts]
portscan3r = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
